kustomization/components/paperless/networkpolicy/allow-paperless-backup-to-api-server.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-paperless-backup-to-api-server-networkpolicy
spec:
  egress:
    - ports:
        - port: 443
      to:
        - ipBlock:
            cidr: 172.17.0.1/32
    - ports:
        - port: 6443
      to:
        - ipBlock:
            cidr: 10.11.0.101/32 # node01 node IP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: paperless-backup
  policyTypes:
    - Egress
